--- a/public/style.css
+++ b/public/style.css
@@ -339,7 +339,7 @@ ul{
   width: 100%;
   height: 100%;
   background: rgba(0, 0,0, 0.7);
-  z-index: 1;
+  z-index: 2;
   display: none; 
 }
 .popup-AddEvent  .content-AddEvent,
@@ -830,6 +830,21 @@ input:hover, .delateEvent:hover, .shareEvent:hover
 	border-radius: 100px;
 	font-family: 'Roboto', sans-serif;
 	cursor: pointer;
+} */
+.fc-daygrid-event-harness
+{
+  pointer-events: none;
+}
+.fc .fc-daygrid-day-frame
+{
+  height: 70px;
+  overflow: hidden;
+}
+/* #calendar {
+  height:490px;
+}
+.fc-scroller {
+  overflow-y: hidden !important;
 } */
 @media screen and (max-width: 900px) {
 	
