--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,8 @@
 } 
 button, input{
   font-family: 'ABeeZee', sans-serif;
-  
+  border: 2px solid rgb(75, 74, 74);
+
 }
 .ck-editor__editable {
   max-height: 200px;
@@ -48,8 +49,9 @@ button, input{
 @media (min-width: 40em) {
   body {
     grid: 'header header' auto
-          'nav main' 1fr
-          'nav footer' auto
+          'main' auto
+          'nav' auto
+          'footer' auto
         / 12em 1fr;
   }
 }
@@ -94,7 +96,7 @@ header h1, header h1 a {
   font-size: 190%;
   /* margin-bottom: 0px; */
   text-shadow: 3px 3px #333;
-  color: rgb(0, 0, 0);
+  color: white;
   letter-spacing: 5px;
   text-decoration: none;
 }
@@ -227,13 +229,20 @@ ul{
   border: none;
 }
 /* NEWS EVENTS */
-
+#AddEvents
+{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-around;
+  /* align-items: center; */
+  justify-content: center;
+}
 .Evento{
   /* background:  linear-gradient(to right bottom, #a4cd88 50%, #c3deb1 50.1%); */
   border-radius: 20px;
   padding-bottom: 20px;
-  /* overflow-y: scroll;  */
-  /* height:200px; */
+  width: 400px;
+  margin: 10px;
   margin-top: 10px;
 }
 
@@ -315,13 +324,20 @@ ul{
   
   
 }
-
+@media only screen and (max-width: 890px) {
+  .Evento {
+   width: 90%;
+    
+  }
+  
+  
+}
 /*pantalla grande pc*/
 @media only screen and (min-width: 1500px) {
 
   .Evento{
-    width: 1000px;
-    margin-left: 20%;
+    /* width: 1000px; */
+    /* margin-left: 20%; */
   
   }
   
