--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
 	 /* background-color: #dbdbdb; */
 
  }
+
  
  h1, h2, h3, h4, h5, h6, input, p, label, textarea, button, div, ul, li, a, select, img, option, b, i, u, span, video 
  {
@@ -22,6 +23,7 @@
  }
  
   body {
+    background-color: #ceebe5;
    color: #606c76;
    font-family: 'ABeeZee', sans-serif;
    font-size: 1.6em;
@@ -67,6 +69,20 @@ header{
   align-items: center;
   padding: .5rem 2rem;
   z-index: 4 !important;
+}
+.logo-header
+{
+  display: flex;
+}
+.socialL
+{
+  padding-top: 16px;
+  padding-left: 20px;
+}
+.socialL a img
+{
+ width: 15px;
+
 }
 .logo-header img{
   width: 50px;
@@ -168,11 +184,13 @@ header .overlay{
   font-size: 100% !important;
 
 }
-header h1, header h1 a {
+#titleLes, #titleLes a {
   background: transparent;
   font-family: 'Shrikhand', cursive;
   /* margin-top: -10px; */
-  font-size: 190%;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-left: 5px;
   /* margin-bottom: 0px; */
   text-shadow: 3px 3px #333;
   color: white;
@@ -319,7 +337,7 @@ ul{
 .Evento{
   /* background:  linear-gradient(to right bottom, #a4cd88 50%, #c3deb1 50.1%); */
   /* border-radius: 20px; */
-  background: white;
+  background: white !important;
   border-top: solid 3px;
   border-top-color: magenta;
   padding-bottom: 20px;
@@ -751,7 +769,7 @@ button
 
 .menu {
   width: 0px;
-  height: 180px;
+  height: 97px;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 10px 0 50px rgba(0, 0, 0, 0.2);
@@ -1202,10 +1220,7 @@ td, .fc-scrollgrid-sync-inner,
   h1{
       font-size:22px;
   }
-  header h1, header h1 a {
 
-    font-size: 15vw;
-  }
   .contenedor-imagenes{
       width: 98%;
   }
