--- a/public/style.css
+++ b/public/style.css
@@ -80,7 +80,7 @@ header{
   padding-left: 20px;
 }
 i.menu-icon.fa.fa-bars {
-  color: black;
+  /* color: black; */
 }
 .socialL a img
 {
@@ -342,7 +342,7 @@ ul{
   /* border-radius: 20px; */
   background: white !important;
   border-top: solid 3px;
-  border-top-color: magenta;
+  border-top-color: #0bb2aa;
   padding-bottom: 20px;
   width: 400px;
   margin: 10px;
