--- a/public/style.css
+++ b/public/style.css
@@ -79,9 +79,6 @@ header{
   padding-top: 16px;
   padding-left: 20px;
 }
-i.menu-icon.fa.fa-bars {
-  /* color: black; */
-}
 .socialL a img
 {
  width: 15px;
@@ -120,7 +117,7 @@ i.menu-icon.fa.fa-bars {
   }
   i.menu-icon.fa.fa-bars
   {
-    display: contents;
+    display: block;
   }
   .menu-icon{
       display: block;
@@ -342,7 +339,7 @@ ul{
   /* border-radius: 20px; */
   background: white !important;
   border-top: solid 3px;
-  border-top-color: #0bb2aa;
+  border-top-color: magenta;
   padding-bottom: 20px;
   width: 400px;
   margin: 10px;
