--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@
  }
  
   body {
-    background-color: #ceebe5;
+    background-color: #fffaf0;
    color: #606c76;
    font-family: 'ABeeZee', sans-serif;
    font-size: 1.6em;
@@ -62,13 +62,17 @@ button, input{
   }
 }
 header{
-  background-color: #0bb2aa;
+  background-color: #3cc47c;
   color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .5rem 2rem;
+  /* padding: .5rem 2rem; */
+  padding: 2.5rem 3rem;
   z-index: 4 !important;
+}
+header a {
+  text-decoration: none;
 }
 .logo-header
 {
@@ -320,12 +324,12 @@ ul{
   background: #89b4ad !important;
 }
 .fc-day-today {
-  background: #9b9c9c !important;
+  background: #c0c5c2 !important;
 
 } 
 #calendar button
 {
-  background: #0bb2aa;
+  background: #828081;
   border: none;
 }
 /* NEWS EVENTS */
@@ -342,7 +346,7 @@ ul{
   /* border-radius: 20px; */
   background: white !important;
   border-top: solid 3px;
-  border-top-color: #0bb2aa;
+  border-top-color: #3cc47c;
   padding-bottom: 20px;
   width: 400px;
   margin: 10px;
@@ -381,6 +385,7 @@ ul{
 .Evento .content h4{
   font-size: 15px;
   margin-bottom: 10px;
+  font-weight: 100;
 }
 /*pantalla pequeña movil*/
 .description-event 
@@ -403,7 +408,8 @@ ul{
 }
 .AsistenciaInput::placeholder {
   color: rgb(70, 70, 70);
-
+  /* text-align: center; */
+  margin-left: 10px;
 }
 .bInfo
 {
@@ -415,7 +421,7 @@ ul{
 
 /* CSS */
 .bInfo{
-  background-color: #0bb2aa;
+  background-color: #3cc47c;
   border-radius: 8px;
   border-style: none;
   box-sizing: border-box;
@@ -453,17 +459,13 @@ ul{
 .BGoogle
 {
   border-radius: 10px;
-  background-color: #0bb2aa;
-  color: white;
-  width:175px;
-    height:65px;
-    margin:20px auto;
-    border-radius:10px;
-    -webkit-border-radius:10px;
-    box-shadow:0 1px 2px #5e5d5b;
-    text-align: center;  
-    line-height: 65px;  
-    margin: auto; 
+  background-color: #fffaf0;
+  color: black;
+  width: 105px;
+  height: 32px;
+  margin: 20px auto;
+  margin: auto;
+
 }
 .BGoogle img
 {
@@ -741,7 +743,14 @@ button
   border-radius: 20px;
   cursor: pointer;
   font-family: 'ABeeZee', sans-serif;
-  font-weight: 900 !important;
+  /* font-weight: 900 !important; */
+  border-radius: 10px;
+  background-color: #fffaf0;
+  color: black;
+  width: 105px;
+  height: 32px;
+  margin: 20px auto;
+  margin: auto;
 }
 
 #ViewAllEvents:hover
