--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ button, input{
   }
 }
 header{
-  background-color: #3cc47c;
+  background-color: #75c9a3;
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -138,7 +138,7 @@ i.menu-icon.fa.fa-bars {
       position: fixed;
       top:50px;
       left:-100%;
-      background: #0bb2aa;
+      background: #75c9a3;
       width: 100%;
       height: 100vh;
       right: 0;
@@ -321,7 +321,7 @@ ul{
   margin: 0 auto;
 }
 .fc-highlight , .day-highlight{
-  background: #89b4ad !important;
+  background: #bac99ab0 !important;
 }
 .fc-day-today {
   background: #c0c5c2 !important;
@@ -329,7 +329,7 @@ ul{
 } 
 #calendar button
 {
-  background: #828081;
+  background: #a9a7a7;
   border: none;
 }
 /* NEWS EVENTS */
@@ -535,7 +535,7 @@ ul{
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%) scale(0);
-  background: #0bb2aa;
+  background: #75c9a3;
   width: 70%; 
   /* height: 420px; */
   z-index: 2;
@@ -669,7 +669,7 @@ ul{
 #swip {
   position: relative;
   height: 100%;
-  background: #0bb2aa;
+  background: #75c9a3;
   font-family: 'ABeeZee', sans-serif;
   font-size: 14px;
   color: #000;
@@ -758,7 +758,7 @@ button
   background: #91979c !important;
 }
 .feedback {
-  background-color : #0bb2aa;
+  background-color : #75c9a3;
   color: white;
   padding: 10px 20px;
   border-radius: 4px;
@@ -804,7 +804,7 @@ button
   width: 40px;
   border-radius: 50%;
   z-index: 1;
-  background-color: #0bb2aa;
+  background-color: #75c9a3;
   border: 2px solid #000000;
   display: flex;
   align-items: center;
