--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ ul{
 } 
 #calendar button
 {
-  background: #0bb2aa;
+  background: #75c9a3;
   border: none;
 }
 /* NEWS EVENTS */
@@ -281,7 +281,7 @@ ul{
 .BGoogle
 {
   border-radius: 10px;
-  background-color: #0bb2aa;
+  background-color: #75c9a3;
   color: white;
   width:175px;
     height:65px;
@@ -353,7 +353,7 @@ ul{
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%) scale(0);
-  background: #0bb2aa;
+  background: #75c9a3;
   width: 70%; 
   /* height: 420px; */
   z-index: 2;
@@ -487,7 +487,7 @@ ul{
 #swip {
   position: relative;
   height: 100%;
-  background: #0bb2aa;
+  background: #75c9a3;
   font-family: 'ABeeZee', sans-serif;
   font-size: 14px;
   color: #000;
@@ -559,7 +559,7 @@ input:hover, .delateEvent:hover, .shareEvent:hover
   background: #91979c !important;
 }
 .feedback {
-  background-color : #0bb2aa;
+  background-color : #75c9a3;
   color: white;
   padding: 10px 20px;
   border-radius: 4px;
@@ -605,7 +605,7 @@ input:hover, .delateEvent:hover, .shareEvent:hover
   width: 40px;
   border-radius: 50%;
   z-index: 1;
-  background-color: #0bb2aa;
+  background-color: #75c9a3;
   border: 2px solid #000000;
   display: flex;
   align-items: center;
