--- a/public/style.css
+++ b/public/style.css
@@ -185,6 +185,36 @@ header .overlay{
   border-radius: 0 0 85% 85% / 30%;
 
 } */
+
+#number, #verificationcode {
+  /* width: calc(100% - 24px); */
+  /* padding: 10px;
+  font-size: 20px;
+  margin-bottom: 5px; */
+  /* outline: none; */
+}
+#recaptcha-container {
+  margin-bottom: 5px;
+}
+#send, #verify {
+  /* width: 100%; */
+  /* height: 40px;
+  outline: none; */
+}
+.p-conf, .n-conf {
+  width: calc(100% - 22px);
+  border: 2px solid green;
+  border-radius: 4px;
+  padding: 8px 10px;
+  margin: 4px 0px;
+  background-color: rgba(0, 249, 12, 0.5);
+  display: none;
+}
+.n-conf {
+  border-color: red;
+  background-color: rgba(255, 0, 4, 0.5);
+}
+
 @font-face {
   font-family: 'ABeeZee', sans-serif;
 }
