--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,7 @@ header a {
 .logo-header
 {
   display: flex;
+  z-index: 101;
 }
 .socialL
 {
@@ -137,12 +138,13 @@ i.menu-icon.fa.fa-bars {
   .nav-menu ul{
       display: block;
       position: fixed;
-      top:50px;
+      top:-17px;
       left:-100%;
       background: #75c9a3;
       width: 100%;
       height: 100vh;
       right: 0;
+      padding: 100px;
   }
   .nav-menu ul li{
       padding: 2rem;
@@ -542,6 +544,8 @@ ul{
 .popup-AddEvent .overlay-AddEvent,
 .popup-EditEvent .overlay-EditEvent,
 .popup-Votacion .overlay-Votacion,
+.popup-InitGoogle .overlay-InitGoogle,
+.popup-InitEmail .overlay-InitEmail,
 .popup-Horoscopo .overlay-Horoscopo, 
 .popup-shareAgenda .overlay-shareAgenda,
 .popup-Vot .overlay-Vot
@@ -558,6 +562,8 @@ ul{
 .popup-AddEvent  .content-AddEvent,
 .popup-EditEvent  .content-EditEvent,
 .popup-Votacion .content-Votacion,
+.popup-InitGoogle .content-InitGoogle,
+.popup-InitEmail .content-InitEmail,
 .popup-Horoscopo .content-Horoscopo, 
 .popup-shareAgenda .content-shareAgenda,
 .popup-Vot .content-Vot
@@ -618,6 +624,8 @@ ul{
 .popup-AddEvent .close-btn,
 .popup-EditEvent .close-btn,
 .popup-Votacion .close-btn,
+.popup-InitGoogle .close-btn,
+.popup-InitEmail .close-btn,
 .popup-shareAgenda .close-btn,
 .popup-Vot .close-btn,
 .popup-Horoscopo .close-btn
@@ -642,6 +650,8 @@ ul{
 .popup-AddEvent.active .overlay-AddEvent, 
 .popup-EditEvent.active .overlay-EditEvent, 
 .popup-Votacion.active .overlay-Votacion,
+.popup-InitGoogle.active .overlay-InitGoogle,
+.popup-InitEmail.active .overlay-InitEmail,
 .popup-shareAgenda.active .overlay-shareAgenda,
 .popup-Vot.active .overlay-Vot,
 .popup-Horoscopo.active .overlay-Horoscopo
@@ -651,6 +661,8 @@ ul{
 .popup-AddEvent.active .content-AddEvent,
 .popup-EditEvent.active .content-EditEvent,
 .popup-Votacion.active .content-Votacion, 
+.popup-InitGoogle.active .content-InitGoogle, 
+.popup-InitEmail.active .content-InitEmail, 
 .popup-shareAgenda.active .content-shareAgenda, 
 .popup-Vot.active .content-Vot,
 .popup-Horoscopo.active .content-Horoscopo
@@ -885,7 +897,10 @@ button
   align-items: center;
   cursor: pointer;
 }
-
+div#Backlo {
+  z-index: 100;
+  position: relative;
+}
 .liNav:hover {
   background-color: #dddddd;
   width: 230px;
